# lpd-detector

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  requirements.md  setup.py  test.xml
app/: .gitattributes  MANIFEST.in  requirements.txt  setup.cfg  setup.py
app/lpd/: _version.py
client/excaliburFemSupportLib/: Makefile
client/femApiTest/: .cproject  .project
config/: lpdFemGui_config.json  odin_data_lpd_config.json
config/CmdSequence/: LCLS_2018_Cmds_upto6images_1MHz.xml  LPD_cmdSeq_NormalOperation.xml
config/ReadoutParams/: LCLS_2018_readoutConfiguration_Baseline.xml  readoutConfiguration_John.xml
config/SetupParams/: LCLS_HighZ_ASICParams.xml  LCLS_SiliconASICParams.xml
config/data/: fp_test_lpd_1.config  fp_test_lpd_2.config  fr_test_lpd_1.config  fr_test_lpd_2.config
control/: README.md  setup.cfg  setup.py
control/excalibur/: detector.py  fem_api_parameters.py  parameter.py
control/fem_api_extension/: fem_api_wrapper.c
data/: CMakeLists.txt
data/cmake/: FindOdinData.cmake
data/config/: fp_log4cxx.xml  fp_test_lpd_1.config  fp_test_lpd_2.config  fr_test_lpd_1.config  fr_test_lpd_2.config
data/frameProcessor/src/: CMakeLists.txt  ExcaliburProcessPlugin.cpp  LpdProcessPlugin.cpp
data/frameReceiver/src/: CMakeLists.txt  ExcaliburFrameDecoder.cpp  LpdFrameDecoder.cpp  LpdFrameDecoderLib.cpp
excalibur/: adapter.py  detector.py  fem.py  fem_api_parameters.py  parameter.py
excalibur/testing/: test_adapter.py  test_detector.py  (+1 more)
fem_api_extension/: fem_api_wrapper.c
python/: .pydevproject
scripts/: install
(+669 files in other folders)
