
set(CMAKE_INCLUDE_CURRENT_DIR on)
ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

set(ODINDATA_FRAMEPROCESSOR_INCLUDE_DIR ${ODINDATA_INCLUDE_DIR}/../../frameProcessor/include)
message("ODINDATA_FRAMEPROCESSOR_INCLUDE_DIR ${ODINDATA_FRAMEPROCESSOR_INCLUDE_DIR}")

include_directories(${FRAMEPROCESSOR_DIR}/include ${ODINDATA_INCLUDE_DIR} ${ODINDATA_FRAMEPROCESSOR_INCLUDE_DIR}
	${Boost_INCLUDE_DIRS} ${LOG4CXX_INCLUDE_DIRS}/.. ${ZEROMQ_INCLUDE_DIRS})

# Add library for excalibur plugin
add_library(ExcaliburReorderPlugin SHARED ExcaliburReorderPlugin.cpp)

        